--- a/MovieReview/nbproject/private/private.properties
+++ b/MovieReview/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Satya\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Orenji\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
